<resources>
    <string name="app_name">Control de Acceso</string>
    <string name="hint_username">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_button_login">Login</string>
    <string name="text_main_menu">Seleccione una opción</string>
    <string name="button_worker">Empleados</string>
    <string name="button_users">Usuarios</string>
    <string name="button_loggout">Cerrar Sesion</string>
    <string name="text_loading">Espere un momento por favor...</string>
    <string name="registertitle">Datos Personales</string>
    <string name="hint_name_scan">Nombre</string>
    <string name="hint_lastname_scan">Apellido</string>
    <string name="hint_identification_scan">Identificacion</string>
    <string name="hint_celphone_scan">Celular</string>
    <string name="hint_gender_scan">Genero</string>
    <string name="hint_temperature_scan">Seleccione temperatura</string>
    <string name="btn_scan_get">Leer Doc</string>
    <string name="btn_scan_cancel">Cancelar</string>
    <string name="btn_scan_send">Enviar</string>
    <string name="turn_on_flashlight">Enceder Luz</string>
    <string name="turn_off_flashlight">Apagar Luz</string>
    <string name="hint_type_scan">Seleccion Accion</string>
    <string name="swith_type_in">Entrada</string>
    <string name="swith_type_out">Salida</string>
    <string name="title_scanpeopleactivity">Registro de empleados</string>
    <string name="copyrigth">© 2014 Ardobot Robótica SAS</string>

    <string name="formname">Nombre</string>
    <string name="formdocument">Cedula</string>
    <string name="formgender">Genero</string>
    <string name="quest2"> * ¿Ha presentado alguno de estos síntomas en las últimas 24 horas? </string>
    <string name="quest3"> * ¿Ha estado en contacto con alguien que presente los síntomas antes mencionados en las últimas 24 horas? </string>
    <string name="quest4"> * ¿Realizó el lavado o desinfección de las manos antes de ingresar a las instalaciones?</string>
    <string name="quest5"> * ¿Realizó usted la desinfección correspondiente al llegar a su hogar? </string>
    <string name="quest6"> * ¿Realizó cambio de la ropa de trabajo tal como se le ha indicado en los protocolos? </string>
    <string name="quest7"> * ¿Durante las últimas 24 horas ha asistido a algún centro de atención o EPS? </string>
    <string name="title_scanclietactivity">Registro de clientes</string>
    <string name="formtemperature">Temperatura</string>
    <string name="formage">Edad</string>
    <string name="formaddress">Direccion</string>
    <string name="formcellphone">Celular</string>
    <string name="btn_scan_search">Buscar</string>
    <string name="select_date">Selecciona fecha</string>
    <string name="formborn">Fecha de nacimiento</string>
    <string name="formcause">Motivo</string>
    <string-array name="quest2_data">
        <item>Fiebre</item>
        <item>Tos</item>
        <item>Dolor de cabeza</item>
        <item>Dolor de garganta</item>
        <item>Malestar general</item>
        <item>Dificultad para respirar</item>
        <item>Secreciones nasales</item>
        <item>Diarrea</item>
        <item>Ausencia de fuerza física</item>
        <item>No he presentado ninguno de los síntomas mencionados</item>
    </string-array>
    <string-array name="bool_data">
        <item>si</item>
        <item>no</item>
    </string-array>
    <string-array name="gender_data">
        <item>Mujer</item>
        <item>Hombre</item>
    </string-array>

    <string name="UseWith">Use with</string>
    <string name="default_cause">Posible compra</string>
    <string name="default_address">Direccion desconocida</string>

</resources>