<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.view.MenuActivity"
    android:weightSum="1"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/selectmy"
        />
    </RelativeLayout>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.3"
        android:gravity="center_horizontal"
        android:padding="40dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_main_menu"
            android:textSize="20dp"
            android:layout_marginBottom="20dp"
            />
        <Button
            android:id="@+id/btnWorker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_worker"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:theme="@style/RaisedButtonDark"
            android:onClick="scanWorker"
            />
        <Button
            android:id="@+id/btnUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_users"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:theme="@style/RaisedButtonDark"
            android:onClick="scanUser"
            />
        <Button
            android:id="@+id/btnlogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/button_loggout"
            android:theme="@style/RaisedButtonDark"
            android:layout_margin="10dp"
            android:onClick="Logout"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>